--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </div>
         </div>
         <!-- Welcome text moved outside and below the blob -->
-        <p class="subtitle">Welcome to EDGE, where learning meets innovation.</p>
+        <p class="subtitle">Join us to know more about innovation @EDGE tomorrow from 11:30 - 12:30 in HQ auditorium</p>
       </div>
     </div>
 
