--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
   <title>EDGE Voice Chat</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- OLD FONT: Montserrat -->
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap" rel="stylesheet"> -->
-  
-  <!-- NEW FONT: Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap" rel="stylesheet">
   
   <style>
     :root{
@@ -23,7 +20,6 @@
     body{
       background:radial-gradient(1200px 1200px at 50% -20%, #151821 0%, #0b0c10 50%, #000 100%);
       color:var(--text); 
-      /* Updated base font to Montserrat for UI, keeping Poppins for the special title */
       font-family:'Montserrat',system-ui,Segoe UI,Roboto,sans-serif;
       overflow:hidden;
     }
@@ -46,7 +42,7 @@
     .hint{color:var(--muted);background:#0e1217;border:1px solid var(--border);padding:10px 14px;border-radius:999px}
 
     .card{ width:100%; display:flex; justify-content:center; align-items:center; border:none; background:transparent; box-shadow:none; }
-    .footer {color: #aab2bd; text-align: center; font-size: 21px; /* <-- Add this line */}
+    .footer {color: #aab2bd; text-align: center; font-size: 19px;}
     .footer a{color:#a7d7ff;text-decoration:none;border-bottom:1px solid rgba(167,215,255,.35)}
 
     .blob-wrap{
@@ -78,10 +74,9 @@
     }
     .blob-content { z-index: 10; position: relative; }
     
-    /* --- FONT CHANGED HERE --- */
     .blob h1 {
-      font-family: 'Poppins', sans-serif; /* Use new font */
-      font-weight: 800; /* Bolder for more impact */
+      font-family: 'Poppins', sans-serif;
+      font-weight: 800;
       font-size: clamp(20px, 3.2vw, 36px);
       margin: 0 18px;
       color: #e8eef8;
@@ -89,6 +84,16 @@
                    0 0 25px rgba(238, 0, 255, 0.6),
                    0 0 40px rgba(0, 204, 255, 0.5);
       transition: opacity .4s ease;
+      min-height: 1.2em; /* Prevents layout shift during typing */
+    }
+
+    /* Typewriter Cursor Style */
+    .typing::after {
+      content: '▋';
+      display: inline-block;
+      margin-left: 0.1em;
+      color: #00ccff; /* Cursor color */
+      animation: blink 0.8s infinite;
     }
     
     #waveCanvas {
@@ -107,7 +112,7 @@
     }
     .subtitle{
       color: #b9c1d0;
-      font-size: clamp(25px, 1.6vw, 20px);
+      font-size: clamp(17px, 1.6vw, 20px);
       font-weight: 500;
       max-width:480px; opacity: 0.9;
     }
@@ -125,14 +130,13 @@
       100% { border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%; }
     }
     @keyframes speaking-pulse {
-      0%, 100% {
-        transform: translateY(0);
-        filter: drop-shadow(0 0 25px #ee00ff55) drop-shadow(0 0 45px #00ccff44);
-      }
-      50% {
-        transform: translateY(-10px);
-        filter: drop-shadow(0 0 40px #ee00ffaa) drop-shadow(0 0 65px #00ccff88);
-      }
+      0%, 100% { transform: translateY(0); filter: drop-shadow(0 0 25px #ee00ff55) drop-shadow(0 0 45px #00ccff44); }
+      50% { transform: translateY(-10px); filter: drop-shadow(0 0 40px #ee00ffaa) drop-shadow(0 0 65px #00ccff88); }
+    }
+    /* Cursor blink animation */
+    @keyframes blink {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0; }
     }
   </style>
 </head>
@@ -150,7 +154,7 @@
         <div class="blob" aria-live="polite">
           <canvas id="waveCanvas"></canvas>
           <div class="blob-content">
-            <h1>Hi, I'm EDGE AI</h1>
+            <h1></h1> <!-- Text content is now managed entirely by JS -->
           </div>
         </div>
         <p class="subtitle">Join us to know more about innovation @EDGE tomorrow from 11:30 - 12:30 in HQ auditorium</p>
@@ -161,7 +165,6 @@
   </div>
 
   <script>
-    // --- NO CHANGES TO JAVASCRIPT ---
     const $ = s => document.querySelector(s);
     const toggleBtn = $('#toggle'), voiceStatus = $('#vstat'), blob = $('.blob');
     const history = [];
@@ -174,12 +177,8 @@
       if (kind === 'listen') { blob.classList.add('listening'); startWaveAnimation(); }
       else if (kind === 'speak') { blob.classList.add('speaking'); }
     }
-
     let voice = null;
-    const FEMALE_VOICE_HINTS = [
-      'Microsoft Emily', 'Emily', 'Microsoft Zira', 'Zira', 'Samantha', 'Victoria',
-      'Google UK English Female', 'Google US English', 'Wavenet-F', 'Neural2-F'
-    ];
+    const FEMALE_VOICE_HINTS = ['Microsoft Emily','Emily','Microsoft Zira','Zira','Samantha','Victoria','Google UK English Female','Google US English','Wavenet-F','Neural2-F'];
     function chooseVoice(){
       const voices = window.speechSynthesis.getVoices() || [];
       const en = voices.filter(v => /^en[-_]/i.test(v.lang));
@@ -187,12 +186,11 @@
     }
     window.speechSynthesis.onvoiceschanged = chooseVoice;
     chooseVoice();
-
     let speaking = false;
     function speak(text){
       if (!voiceOn) return;
       try{
-        const u = new SpeechSynthesisUtterterance(text);
+        const u = new SpeechSynthesisUtterance(text);
         if (voice) u.voice = voice;
         u.rate = 1.0;
         u.onstart = ()=>{ speaking = true; showStatus('speak','Speaking'); };
@@ -202,7 +200,6 @@
       }catch(e){ console.warn('TTS error', e); }
     }
     function stopSpeaking(){ try{ window.speechSynthesis.cancel(); }catch(e){} speaking = false; }
-
     const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
     let rec = null, listening = false, lastTranscript = '';
     function initSR(){
@@ -225,7 +222,6 @@
       };
     }
     initSR();
-
     let voiceOn = false;
     function startSR(){ if (rec && !listening) try{ rec.start(); }catch(e){console.error(e)} }
     function stopSR(){ if (rec) try{ rec.stop(); }catch{} listening=false; showStatus('idle','Idle'); }
@@ -235,7 +231,6 @@
       voiceOn = !voiceOn; toggleBtn.textContent = voiceOn ? 'Voice On' : 'Voice Off';
       if (voiceOn){ stopSpeaking(); startSR(); } else { stopSR(); stopSpeaking(); }
     }
-
     async function postJSON(url, payload){
       const r = await fetch(url, {method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify(payload)});
       const text = await r.text(); if (!r.ok) throw new Error('HTTP ' + r.status + ' ' + text); return JSON.parse(text);
@@ -250,18 +245,13 @@
         history.push({role:'assistant', content:reply}); speak(reply);
       }catch(e){ console.warn('Chat error', e); speak('Sorry, I had trouble reaching the server.'); }
     }
-
     const canvas = document.getElementById('waveCanvas'); const ctx = canvas.getContext('2d');
     let animationFrameId = null;
     function resizeCanvas() {
         const dpr = window.devicePixelRatio || 1; const size = blob.clientWidth;
         canvas.width = size * dpr; canvas.height = size * dpr; ctx.scale(dpr, dpr);
     }
-    const waves = [
-        { color: 'rgba(238, 0, 255, 0.7)', amp: 30, freq: 0.02, phase: 0, speed: 0.03 },
-        { color: 'rgba(0, 204, 255, 0.8)', amp: 40, freq: 0.015, phase: 2, speed: 0.02 },
-        { color: 'rgba(255, 255, 255, 0.6)', amp: 25, freq: 0.025, phase: 4, speed: 0.04 }
-    ];
+    const waves = [{color:'rgba(238,0,255,0.7)',amp:30,freq:0.02,phase:0,speed:0.03},{color:'rgba(0,204,255,0.8)',amp:40,freq:0.015,phase:2,speed:0.02},{color:'rgba(255,255,255,0.6)',amp:25,freq:0.025,phase:4,speed:0.04}];
     function drawWave() {
       const w = canvas.clientWidth, h = canvas.clientHeight;
       ctx.clearRect(0, 0, w, h);
@@ -274,11 +264,47 @@
       animationFrameId = requestAnimationFrame(drawWave);
     }
     function startWaveAnimation() { if (!animationFrameId) { resizeCanvas(); drawWave(); } }
-    function stopWaveAnimation() {
-      if (animationFrameId) { cancelAnimationFrame(animationFrameId); animationFrameId = null; setTimeout(() => { if(!animationFrameId) ctx.clearRect(0, 0, canvas.clientWidth, canvas.clientHeight);}, 100); }
-    }
+    function stopWaveAnimation() { if (animationFrameId) { cancelAnimationFrame(animationFrameId); animationFrameId = null; setTimeout(() => { if(!animationFrameId) ctx.clearRect(0, 0, canvas.clientWidth, canvas.clientHeight);}, 100); } }
     window.addEventListener('resize', () => { resizeCanvas(); if(blob.classList.contains('listening')){ startWaveAnimation(); } });
     resizeCanvas();
+
+    // --- NEW LOOPING TYPEWRITER EFFECT ---
+    document.addEventListener('DOMContentLoaded', () => {
+      const h1 = document.querySelector('.blob h1');
+      const textToType = "Hello, I'm EDGE AI";
+      const typeSpeed = 120; // ms per character
+      const pauseAfterTyping = 1500; // ms to keep cursor blinking after typing
+      const pauseBetweenLoops = 10000; // 10 seconds of pause
+
+      // Calculate the total duration of one animation cycle
+      const animationRuntime = (textToType.length * typeSpeed) + pauseAfterTyping;
+      const loopInterval = animationRuntime + pauseBetweenLoops;
+
+      function typewriterEffect() {
+        h1.textContent = '';
+        h1.classList.add('typing');
+        let i = 0;
+
+        function type() {
+          if (i < textToType.length) {
+            h1.textContent += textToType.charAt(i);
+            i++;
+            setTimeout(type, typeSpeed);
+          } else {
+            setTimeout(() => {
+              h1.classList.remove('typing');
+            }, pauseAfterTyping);
+          }
+        }
+        type();
+      }
+
+      // Run the animation immediately on load
+      typewriterEffect();
+      // Then, set it to loop on the calculated interval
+      setInterval(typewriterEffect, loopInterval);
+    });
+
   </script>
 </body>
 </html>
