--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       background: radial-gradient(circle at 50% 50%, #150522, #000);
       will-change: transform, border-radius; overflow: hidden;
       filter: drop-shadow(0 0 25px rgba(238, 0, 255, 0.5)) drop-shadow(0 0 45px rgba(0, 204, 255, 0.4));
+      isolation: isolate; /* FIX #1: Forces correct rendering context */
       animation:
         wobble-organic 15s ease-in-out infinite,
         floaty 12s ease-in-out infinite;
@@ -70,12 +71,14 @@
       background: conic-gradient(from 90deg, #ee00ff, #6600ff, #00ccff, #ee00ff);
       animation: spin 15s linear infinite;
       mix-blend-mode: screen; opacity: 0.9; transition: opacity .5s ease;
+      border-radius: inherit; /* FIX #2: Ensures pseudo-element matches parent shape */
     }
     .blob::after {
       content: ''; position: absolute; inset: -50%;
       background: conic-gradient(from 0deg, transparent, #fff, transparent 40%);
       animation: spin 22s linear infinite reverse;
       mix-blend-mode: overlay; opacity: 0.3;
+      border-radius: inherit; /* FIX #2: Ensures pseudo-element matches parent shape */
     }
     .blob-content { z-index: 10; position: relative; }
     
@@ -159,7 +162,7 @@
             <h1></h1>
           </div>
         </div>
-        <p class="subtitle">Join us to know more about innovation @EDGE tomorrow from 11:30 - 12:30 in HQ auditorium</p>
+        <p class="subtitle">Join us to know more about innovation @EDGE tomorrow from <b>11:30 - 12:30</b> in HQ auditorium</p>
       </div>
     </div>
 
@@ -269,15 +272,12 @@
     function stopWaveAnimation() { if (animationFrameId) { cancelAnimationFrame(animationFrameId); animationFrameId = null; setTimeout(() => { if(!animationFrameId) ctx.clearRect(0, 0, canvas.clientWidth, canvas.clientHeight);}, 100); } }
     window.addEventListener('resize', () => { resizeCanvas(); if(blob.classList.contains('listening')){ startWaveAnimation(); } });
     resizeCanvas();
-    
-    // --- BUG-FIX: ROBUST ASYNC/AWAIT TYPEWRITER LOOP ---
     document.addEventListener('DOMContentLoaded', () => {
       const h1 = document.querySelector('.blob h1');
       const textToType = "Hello, I'm EDGE AI";
       const typeSpeed = 120;
       const pauseAfterTyping = 1500;
       const pauseBetweenLoops = 10000;
-
       function typewriterEffect(element, text, speed) {
         return new Promise(resolve => {
           element.textContent = '';
@@ -285,31 +285,20 @@
           let i = 0;
           function type() {
             if (i < text.length) {
-              element.textContent += text.charAt(i);
-              i++;
-              setTimeout(type, speed);
+              element.textContent += text.charAt(i); i++; setTimeout(type, speed);
             } else {
-              // Typing is done, wait a bit then remove cursor and resolve promise
-              setTimeout(() => {
-                element.classList.remove('typing');
-                resolve();
-              }, pauseAfterTyping);
+              setTimeout(() => { element.classList.remove('typing'); resolve(); }, pauseAfterTyping);
             }
           }
           type();
         });
       }
-
-      // This async function will loop forever safely
       async function animationLoop() {
         while (true) {
           await typewriterEffect(h1, textToType, typeSpeed);
-          // Wait for the long pause *after* the animation is fully complete
           await new Promise(resolve => setTimeout(resolve, pauseBetweenLoops));
         }
       }
-
-      // Start the safe, robust loop
       animationLoop();
     });
   </script>
