--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     resizeCanvas();
     document.addEventListener('DOMContentLoaded', () => {
       const h1 = document.querySelector('.blob h1');
-      const textToType = "Hello, I'm EDGE AI";
+      const textToType = "Hello, I'm BRIDGE AI";
       const typeSpeed = 120;
       const pauseAfterTyping = 1500;
       const pauseBetweenLoops = 10000;
