--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <h1></h1>
           </div>
         </div>
-        <p class="subtitle">Join us to know more about innovation @EDGE tomorrow from <b>11:30 - 12:30</b> in HQ auditorium</p>
+        <p class="subtitle">Welcome to EDGE Learning &amp; Innovation Center! <br> Happy Learning!</p>
       </div>
     </div>
 
