--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <h1></h1>
           </div>
         </div>
-        <p class="subtitle">Welcome to EDGE Learning &amp; Innovation Center! <br> Happy Learning!</p>
+        <p class="subtitle">Welcome to EDGE Learning &amp; Innovation Factory! <br> Happy Learning!</p>
       </div>
     </div>
 
