--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <h1></h1>
           </div>
         </div>
-        <p class="subtitle">Welcome to EDGE LIF! <br><br> Find Your Way around here!</p>
+        <p class="subtitle">Welcome to EDGE LIF! <br><br> Find Your Way around here! →</p>
       </div>
     </div>
 
