--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
     </div>
 
-    <div class="footer">Created by <a href="https://www.linkedin.com/in/awaiz-ahmed/" target="_blank" rel="noopener">Awaiz Ahmed &amp; Yumna Salaas</a></div>
+    <div class="footer">Created by <a href="https://www.linkedin.com/in/awaiz-ahmed/" target="_blank" rel="noopener">Awaiz &amp; Yumna</a></div>
   </div>
 
   <!-- UI glue: talks to the module via window.edgeTTS -->
