--- a/index.html
+++ b/index.html
@@ -24,7 +24,46 @@
     padding:18px 16px; border-bottom:1px solid var(--border);
   }
   .brand{display:flex;align-items:center;gap:10px}
-  .logo{height:42px}
+  .logo {
+  height: 70px;              /* bigger logo */
+  width: auto;
+  object-fit: contain;
+}
+/* Footer style */
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  font-size: 14px;
+  color: #4b5563;
+  font-weight: 600;
+  text-align: center;
+}
+
+.footer a {
+  text-decoration: none;
+  color: #7c3aed;
+  font-weight: 700;
+  margin-left: 5px;
+}
+
+.footer .btn {
+  background: #7c3aed;
+  color: #fff;
+  padding: 12px 14px;
+  border-radius: 12px;
+  font-weight: 700;
+  cursor: pointer;
+  border: none;
+  box-shadow: 0 4px 16px rgba(124, 58, 237, .2);
+  transition: transform 0.1s ease;
+}
+
+.footer .btn:hover {
+  transform: translateY(-3px);
+}
+
   .title h1{font:800 18px 'Poppins',sans-serif; margin:0}
   .tagline{font-size:12px; color:var(--muted)}
 
@@ -141,6 +180,12 @@
           <button class="chip" data-say="GMAT number properties warm-up">GMAT</button>
           <button class="chip" data-say="What is gradient descent in simple terms?">AI Basics</button>
         </div>
+        <!-- New footer with additional options -->
+<div class="footer">
+  <span>Need more help? </span>
+  <button class="btn">   Contact Support</button>
+</div>
+
       </aside>
     </section>
   </main>
